--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,18 +1,20 @@
+@import "theme";
+
 .container {
   min-height: 100vh;
-  padding: 0 0.5rem;
+
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
+  align-items: center; 
 }
 
 .main {
-  padding: 5rem 0;
-  flex: 1;
+  width: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
