--- a/styles/BtnQueroEntrar.module.scss
+++ b/styles/BtnQueroEntrar.module.scss
@@ -11,4 +11,5 @@
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
     border-radius: 10px;
     border-width: 0px;
+    cursor: pointer;
 }
