--- a/styles/MainBanner.module.scss
+++ b/styles/MainBanner.module.scss
@@ -4,7 +4,7 @@
     height: 100%;
     width: 100%;
     // background-color:$base-white;
-    background-image: url('/mainbannerbg.png');
+    background-image: url('/mainbannerbg.jpg');
     background-repeat: no-repeat;
     background-size:cover;
     background-position-y: top;
