adding video section

--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -2,7 +2,8 @@ $base-green: rgb(58,202,114);
 $base-blue: rgb(24,113,226);
 $base-white: rgb(202,202,202);
 
-$dark-blue: rgb(40,74,108);
+$dark-blue: rgb(6,46,85);
+$light-blue: rgb(71,179,252);
 
 @font-face {
     font-family: 'moon_getheavy';
