--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -3,6 +3,7 @@ $base-blue: rgb(24,113,226);
 $base-white: rgb(202,202,202);
 
 $dark-blue: rgb(12,71,130);
+$darker-blue: rgb(6,45,84);
 $light-blue: rgb(71,179,252);
 
 @font-face {
