--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -4,7 +4,8 @@ $base-white: rgb(202,202,202);
 
 $dark-blue: rgb(12,71,130);
 $darker-blue: rgb(6,45,84);
-$light-blue: rgb(71,179,252);
+$light-blue: rgb(57,166,252);
+$lighter-blue: rgb(142,204,241);
 
 @font-face {
     font-family: 'moon_getheavy';
