--- a/styles/OQHavera.module.scss
+++ b/styles/OQHavera.module.scss
@@ -8,6 +8,9 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    background-image: url('/planetasEstrelas.png');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .bgblue {
