--- a/styles/FaixaResumo.module.scss
+++ b/styles/FaixaResumo.module.scss
@@ -7,9 +7,11 @@
     flex-direction: row;
     justify-content: center;
     align-items:flex-start;
+    flex-wrap: wrap;
     padding: 20px 50px;
     overflow: hidden;
 }
+
 
 .card {
     display: flex;
@@ -19,11 +21,18 @@
     padding: 10px 25px;
     font-family: 'Arial Black', Helvetica, sans-serif;
     font-weight: bold;
-    font-size: 22px;
+    font-size: 20px;
     line-height: 120%;
     letter-spacing: -2px;
     color: $dark-blue;
     text-align: center;
+    min-width: 270px;
+    max-width: 400px
+}
+
+.card > img {
+    align-self: center;
+    max-width: 150px;
 }
 
 .barra {
@@ -36,6 +45,14 @@
     background-color: $dark-blue;
 }
 
+@media screen and (max-width: 1200px) {
+    .card{
+        font-size: 19px;
+    }
+    .barra{
+        display: none;
+    }
+}
 
 .text{
     margin-top: 15px;
