--- a/styles/porqueAgora.module.scss
+++ b/styles/porqueAgora.module.scss
@@ -59,6 +59,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-bottom: 8px;
 }
 
 .motivoTitulo {
