--- a/styles/MainBanner.module.scss
+++ b/styles/MainBanner.module.scss
@@ -27,3 +27,16 @@
     flex-direction: row;
     justify-content: center;
 }
+
+
+@media screen and (max-width: 800px) {
+    .section {
+        padding: 10px;
+    }
+    .button {
+        margin-bottom: 60px;
+    }
+    .titulo {
+        margin-top: 60px;
+    }
+}
