--- a/styles/OQHavera.module.scss
+++ b/styles/OQHavera.module.scss
@@ -52,9 +52,15 @@
         align-items: center;
     }
     .texto {
-        width: 80%;
+        width: 90vw;
+        margin: 0;
+        font-size: 17px;
+    }
+
+    .titulo {
+        font-size: 22px;
+        width: 90vw;
         margin: 0 auto;
-        font-size: 18px;
     }
 }
 
