--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -2,10 +2,17 @@
 
 .header {
     width: 100%;
-    padding: 20px 0;
+    padding: 20px;
     flex: 1;
     display: flex;
     flex-direction:row;
     justify-content: center;
     align-items: center;
+}
+
+
+@media screen and (max-width: 800px) {
+    .header > img {
+        height: 28px;
+    }
 }
