--- a/styles/MainBanner.module.scss
+++ b/styles/MainBanner.module.scss
@@ -1,9 +1,8 @@
 @import "theme";
 
 .section { 
-    height: 100%;
+    height: 92vh;
     width: 100%;
-    // background-color:$base-white;
     background-image: url('/mainbannerbg.jpg');
     background-repeat: no-repeat;
     background-size:cover;
@@ -12,31 +11,40 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 4rem 5rem;
+    padding: 30px;
     overflow: hidden;
 }
 
-.titulo {
+.logoWrapper {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
 }
 
-.button {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+.logo {
+    margin-right: 100px;
 }
 
 
 @media screen and (max-width: 800px) {
     .section {
-        padding: 10px;
+        padding: 20px;
+        justify-content: space-around;
+        background-position-x:center;
     }
-    .button {
-        margin-bottom: 60px;
+
+    .logoWrapper {
+        justify-content: center !important;
     }
-    .titulo {
-        margin-top: 60px;
+    .logo {
+        margin: 0;
+    }
+}
+
+
+@media screen and (max-width: 570px) {
+    .logo {
+        width: 312px;
+        height: 148px;
     }
 }
