--- a/styles/OQHavera.module.scss
+++ b/styles/OQHavera.module.scss
@@ -40,9 +40,12 @@
 .texto {
     width: 50vw;
     margin-left: 130px;
-    font-family: 'Arial';
+    font-family: 'Arial', Helvetica, sans-serif;
+    font-size: 16px;
     color: $darker-blue;
-    font-size: 19px;
+    text-align: justify;    
+    line-height: 20px;
+    margin-top: 8px;
     text-align: justify;
 }
 
