--- a/styles/Video.module.scss
+++ b/styles/Video.module.scss
@@ -25,7 +25,7 @@
     font-size: 28px;
     letter-spacing: -1px;
     text-align: center;
-    line-height: 32px;
+    line-height: 35px;
 }
 
 .bgblue {
@@ -34,10 +34,11 @@
 
 @media screen and (max-width: 800px) {
     .titulo {
-        font-size: 22px;
+        font-size: 23px;
     }
     .video {
-        width: 90%;
+        width: 99%;
+        height: 50vh;
         margin-bottom: 20px;
     }
 }
