--- a/styles/sobreEliezer.module.scss
+++ b/styles/sobreEliezer.module.scss
@@ -1,9 +1,9 @@
 @import "theme";
 
 .section {
-    padding: 40px 60px;
+    padding: 50px 10px;
     width: 100%;
-    // overflow: hidden;
+    overflow: hidden;
     display: flex;
     flex: 1;
     flex-direction: row;
@@ -17,9 +17,9 @@
 
 .sobre { 
  width: 50%;
- min-width: 500px;
+ max-width: 550px;
  margin: 20px;
- padding: 10px 40px;
+ padding: 10px 20px 10px 0px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
@@ -27,7 +27,7 @@
 }
 
 .titulo {
-    margin-bottom: 80px;
+    margin-bottom: 60px;
     font-family: 'Arial Black', Helvetica, sans-serif;
     color: $darker-blue;
     font-weight: bold;
@@ -39,15 +39,17 @@
 .texto {
     font-family: 'Arial', Helvetica, sans-serif;
     color: $darker-blue;
-    font-size: 15px;
-    line-height: 20px;
+    font-size: 18px;
+    line-height: 21px;
     margin-top: 8px;
     text-align: justify;
 }
 
+
+
 .imageWrapper {
-    width: 35%;
-    min-width: 500px;
+    width: 38%;
+    max-width: 470px;
 }
 
 .imageWrapper > img {
@@ -86,5 +88,9 @@
         font-size: 22px;
         letter-spacing: -2px;
         text-align: center;
+    }
+    .texto {
+        font-size: 18px;
+        line-height: 24px;
     }
 }
