--- a/styles/MainBanner.module.scss
+++ b/styles/MainBanner.module.scss
@@ -1,37 +1,66 @@
 @import "theme";
 
 .section { 
-    height: 92vh;
-    width: 100%;
-    background-image: url('/mainbannerbg.jpg');
-    background-repeat: no-repeat;
-    background-size:cover;
-    background-position-y: top;
-    background-position-x: center;
+    min-height: 100vh;
+    width: 100vw;
+
+    // background-image: url('/mainbannerbg.jpg');
+    // background-repeat: no-repeat;
+    // background-size:cover;
+    // background-position-y: top;
+    // background-position-x: center;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    padding: 30px;
     overflow: hidden;
+
+    padding: 20px;
+    justify-content: center;
+
+
+    box-sizing: border-box;    
+    position: relative;
+    transform-style: inherit;
+
+}
+
+
+.section,
+.section:before {
+    background: 50% 50% / cover;
+}
+
+.section::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: block;
+    background: url('/exemplo-landscape.jpg');
+    background-size: cover;
+    background-position-y: center;
+    transform-origin: center center 0;
+    transform: translateZ(-1px) scale(2);
+    z-index: -1;
+    min-height: 100vh;
 }
 
 .logoWrapper {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: center;
 }
 
 .logo {
-    margin-right: 100px;
+    margin-right: 50px;
 }
 
 
 @media screen and (max-width: 800px) {
-    .section {
-        padding: 20px;
-        justify-content: space-around;
-        background-position-x:center;
-    }
+    // .section {
+    //     justify-content: space-around;
+    // }
 
     .logoWrapper {
         justify-content: center !important;
@@ -41,10 +70,17 @@
     }
 }
 
+@media screen and (max-width: 750px) {
+    .logo {
+        width: 561px;
+        height: 266px;
+    }
+}
+
 
 @media screen and (max-width: 570px) {
     .logo {
-        width: 312px;
-        height: 148px;
+        width: 374px;
+        height: 177px;
     }
 }
