--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,11 +1,28 @@
 @import "theme";
 
-html,
-body {
-  padding: 0;
+* {
+  box-sizing: border-box;
+}
+
+html {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+body {
+  color: $darker-blue;
+  margin: 0;
+  padding: 0;
+  perspective: 1px;
+  transform-style: preserve-3d;
+  height: 100%;
+  width: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  font-family: 'Arial Black', Helvetica, sans-serif;
 }
 
 a {
@@ -13,6 +30,3 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
-}
