--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -2,9 +2,11 @@ $base-green: rgb(58,202,114);
 $base-blue: rgb(24,113,226);
 $base-white: rgb(202,202,202);
 
+$alice-blue: #E9F1F7;
+
 $dark-blue: rgb(12,71,130);
 $darker-blue: rgb(6,45,84);
-$light-blue: rgb(57,166,252);
+$light-blue: rgb(71,179,252);
 $lighter-blue: rgb(142,204,241);
 
 @font-face {
