--- a/styles/BtnQueroEntrar.module.scss
+++ b/styles/BtnQueroEntrar.module.scss
@@ -3,7 +3,7 @@
 .btnWrapper {
     width: 100%;
     padding: 0 auto;
-    margin: 0 auto;
+    margin: 30px auto 5px auto;
     text-align: center;
 }
 
@@ -13,7 +13,7 @@
     color: #FFFFFF;
     font-family:  'moon_getheavy', 'Arial Black', Helvetica, sans-serif;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 25px;
     letter-spacing: 2px;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
     border-radius: 10px;
