--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -14,25 +14,30 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
 }
 
 .footer {
   width: 100%;
-  height: 100px;
+  height: 150px;
   border-top: 1px solid #eaeaea;
+  background-color: $alice-blue;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
 }
 
-.footer img {
-  margin-left: 0.5rem;
+.redesSociais {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 200px;
+  margin-top: 40px;
 }
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.copyright {
+  font-style: italic;
 }
+
