--- a/styles/OQHavera.module.scss
+++ b/styles/OQHavera.module.scss
@@ -9,8 +9,7 @@
     justify-content: space-between;
     align-items: center;
     background-image: url('/planetasEstrelas.png');
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-size:contain;
     overflow: hidden;
 }
 
