--- a/styles/seisModulos.module.scss
+++ b/styles/seisModulos.module.scss
@@ -121,7 +121,8 @@
 
 .importante {
     font-family: Arial, Helvetica, sans-serif;
-    color: rgb(153, 56, 41);
+    // color: rgb(153, 56, 41);
+    color:#D36135;
     font-weight: bold;
     font-size: 16px;
     padding: 15px;
@@ -129,7 +130,8 @@
     text-align: center;
     width:70%;
     margin-bottom: 30px;
-    background-color:rgb(224, 211, 193);
+    // background-color:rgb(224, 211, 193);
+    // background-color:#CD8B76;
     border-radius: 10px;
 
 }
