--- a/styles/FaixaResumo.module.scss
+++ b/styles/FaixaResumo.module.scss
@@ -1,5 +1,6 @@
 @import "theme";
 
+
 .faixa {
     background-color: $dark-blue;
     width: 100%;
@@ -10,6 +11,10 @@
     flex-wrap: wrap;
     padding: 20px 50px;
     overflow: hidden;
+}
+
+.faixa::before {
+    background-color: rgba(0,0,0,0.25);
 }
 
 
