--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -2,7 +2,8 @@
 
 .header {
     width: 100%;
-    padding: 25px;
+    height: 10%;
+    padding: 20px;
     flex: 1;
     display: flex;
     flex-direction:row;
