--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -27,6 +27,8 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  text-align: center;
+  padding: 10px 15px
 }
 
 .redesSociais {
@@ -35,9 +37,5 @@
   justify-content: space-between;
   width: 200px;
   margin-top: 40px;
-}
-
-.copyright {
-  font-style: italic;
 }
 
