--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -2,18 +2,19 @@
 
 .header {
     width: 100%;
-    height: 10%;
-    padding: 20px;
-    flex: 1;
-    display: flex;
-    flex-direction:row;
-    justify-content: center;
-    align-items: center;
+    color: $alice-blue;
+    background-color: black;
+    position: sticky !important;
+    font-size: 14px;
+    line-height: 18px;
+    top: 0px !important;
+    left: 0px;
+    right: 0px;
+    text-align: center;
+    padding: 1px;
+    z-index: 10;
 }
 
-
-@media screen and (max-width: 800px) {
-    .header > img {
-        height: 28px;
-    }
+.header > h4 {
+    margin: 10px auto;
 }
