--- a/styles/MainBanner.module.scss
+++ b/styles/MainBanner.module.scss
@@ -1,22 +1,13 @@
 @import "theme";
 
 .section { 
-    min-height: 92%;
+    min-height: 100vh;
     width: 100vw;
-
-    // background-image: url('/mainbannerbg.jpg');
-    // background-repeat: no-repeat;
-    // background-size:cover;
-    // background-position-y: top;
-    // background-position-x: center;
     display: flex;
     flex-direction: column;
     overflow: hidden;
-
     padding: 20px;
     justify-content: center;
-
-
     box-sizing: border-box;    
     position: relative;
     transform-style: inherit;
@@ -59,10 +50,6 @@
 
 
 @media screen and (max-width: 800px) {
-    // .section {
-    //     justify-content: space-around;
-    // }
-
     .logoWrapper {
         justify-content: center !important;
     }
