--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -3,7 +3,7 @@
 
 .footer {
   width: 100%;
-  height: 150px;
+  min-height: 150px;
   border-top: 1px solid #eaeaea;
   background-color: $alice-blue;
   display: flex;
@@ -11,7 +11,7 @@
   justify-content: space-around;
   align-items: center;
   text-align: center;
-  padding: 50px 15px;
+  padding: 30px 10px;
 }
 
 .redesSociais {
