--- a/styles/cronograma.module.scss
+++ b/styles/cronograma.module.scss
@@ -34,7 +34,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin: 20px auto;
+    margin: 20px auto 40px auto;
     max-width: 960px;
     flex-wrap: wrap;
 }
@@ -78,9 +78,6 @@
     text-align: right;
 }
 
-.botao {
-    margin: 70px
-}
 
 .imagem {
     height: 120px;
