--- a/styles/MainBanner.module.scss
+++ b/styles/MainBanner.module.scss
@@ -7,7 +7,7 @@
     flex-direction: column;
     overflow: hidden;
     padding: 20px;
-    justify-content: center;
+    justify-content: space-evenly;
     box-sizing: border-box;    
     position: relative;
     transform-style: inherit;
