--- a/styles/seisModulos.module.scss
+++ b/styles/seisModulos.module.scss
@@ -109,29 +109,26 @@
 }
 
 .textoFinalAzul {
-    width:60%;
+    width:50%;
     font-family: 'Arial', Helvetica, sans-serif;
     color: $dark-blue;
-    font-size: 21px;
+    font-size: 19px;
     line-height: 22px;
-    margin-top: 80px;
+    margin: 60px auto 10px auto;
     text-align: justify;
 
 }
 
 .importante {
     font-family: Arial, Helvetica, sans-serif;
-    // color: rgb(153, 56, 41);
     color:#D36135;
     font-weight: bold;
     font-size: 16px;
     padding: 15px;
     line-height: 22px;
     text-align: center;
-    width:70%;
-    margin-bottom: 30px;
-    // background-color:rgb(224, 211, 193);
-    // background-color:#CD8B76;
+    width:50%;
+    margin: 5px auto;
     border-radius: 10px;
 
 }
