--- a/styles/cronograma.module.scss
+++ b/styles/cronograma.module.scss
@@ -85,6 +85,14 @@
 }
 
 @media screen and (max-width: 800px) {
+
+    .dias :nth-child(1) { order: 1; }
+    .dias :nth-child(2) { order: 4; }
+    .dias :nth-child(3) { order: 2; }
+    .dias :nth-child(4) { order: 5; }
+    .dias :nth-child(5) { order: 3; }
+    .dias :nth-child(6) { order: 6; }
+
     .titulo {
         font-size: 22px;
     }
