--- a/styles/OQHavera.module.scss
+++ b/styles/OQHavera.module.scss
@@ -29,23 +29,28 @@
 
 .textoWrapper {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    flex-direction: row;
+    flex-wrap: wrap-reverse;
+    align-items: center;
+    justify-content: space-around;
     width: 100%;
     text-align: left;
     padding: 30px;
 }
 
 .texto {
-    width: 55vw;
-    margin-left: 140px;
+    width: 40vw;
     font-family: 'Arial', Helvetica, sans-serif;
     font-size: 19px;
     color: $darker-blue;
     text-align: justify;    
     line-height: 26px;
-    margin-top: 8px;
+    margin: 8px;
     text-align: justify;
+}
+
+.setedias {
+    margin: 8px 30px 8px 8px;
 }
 
 @media screen and (max-width: 1000px) {
