--- a/styles/OQHavera.module.scss
+++ b/styles/OQHavera.module.scss
@@ -50,13 +50,14 @@
 }
 
 .setedias {
-    margin: 8px 30px 8px 8px;
+    margin: 5px 30px 5px 5px;
 }
 
 @media screen and (max-width: 1000px) {
     .textoWrapper{
         text-align: center;
         align-items: center;
+        padding: 15px 5px;
     }
     .texto {
         width: 90vw;
@@ -68,6 +69,14 @@
         font-size: 22px;
         width: 90vw;
         margin: 0 auto;
+    }
+    
+    .setedias {
+        margin: 25px 5px;
+    }
+
+    .setedias > img{
+        height: 270px;
     }
 }
 
