--- a/styles/FaixaResumo.module.scss
+++ b/styles/FaixaResumo.module.scss
@@ -8,7 +8,7 @@
     justify-content: center;
     align-items:flex-start;
     flex-wrap: wrap;
-    padding: 20px 50px;
+    padding: 20px 20px;
     overflow: hidden;
 }
 
@@ -18,9 +18,10 @@
     flex:1;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
     padding: 10px 20px;
-    font-size: 16px;
-    line-height: 20px;
+    font-size: 15px;
+    line-height: 22px;
     color: $alice-blue;
     text-align: center;
     max-width: 380px
@@ -41,6 +42,8 @@
 }
 
 .text{
+    text-align: center;
+    max-width: 80%;
     margin-top: 15px;
 
 }
@@ -50,32 +53,32 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            padding: 40px 0;
+            padding: 40px 5px;
         }
         .card {
             flex-direction: row;
             align-items: center;
-            justify-content: center;
+            justify-content: space-around;
             padding: 10px 0px;
-            width: 80vw;
-            max-width: 500px;
-            margin: 20px auto;
+            width: 100%;
+            margin: 10px auto;
         }
 
         .text{
             margin: 0 0 0 20px;
-            max-width: 130px;
-            max-height: 130px;
+            max-width: 60vw;
+            font-size: 14px;
+            padding: 0 5px;
         }
         .barra {
-            width: 50vw;
-            max-width: 100vw;
+            width: 80vw;
+            max-width: 90vw;
             height: 1px;
         }
 
         .card > img {
-            max-width: 110px;
-            max-height: 110px;
-            margin-right: 20px;
+            max-width: 90px;
+            max-height: 75px;
+            margin: 10px auto;
         }
 }
