--- a/styles/FaixaResumo.module.scss
+++ b/styles/FaixaResumo.module.scss
@@ -59,16 +59,16 @@
             flex-direction: row;
             align-items: center;
             justify-content: space-around;
-            padding: 10px 0px;
+            padding: 10px 10px;
             width: 100%;
-            margin: 10px auto;
+            margin: 10px 0px;
         }
+
 
         .text{
             margin: 0 0 0 20px;
             max-width: 60vw;
             font-size: 14px;
-            padding: 0 5px;
         }
         .barra {
             width: 80vw;
