--- a/styles/cronograma.module.scss
+++ b/styles/cronograma.module.scss
@@ -16,7 +16,7 @@
 
 .titulo {
     margin-bottom: 50px;
-    font-family: 'Arial Black', Helvetica, sans-serif;
+    font-family: 'arial_black', 'Arial Black', Helvetica, sans-serif;
     color: $darker-blue;
     font-weight: bold;
     font-size: 27px;
@@ -61,7 +61,7 @@
 .moduloTituloRight {
     width: 95%;
     align-self: flex-end;
-    font-family: 'Arial Black', Helvetica, sans-serif;
+    font-family: 'arial_black', 'Arial Black', Helvetica, sans-serif;
     color: $dark-blue;
     font-weight: bold;
     font-size: 17px;
