--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -22,7 +22,7 @@ body {
   width: 100%;
   overflow-y: scroll;
   overflow-x: hidden;
-  font-family: 'Arial Black', Helvetica, sans-serif;
+  font-family: 'arial_black','Arial Black', Helvetica, sans-serif;
 }
 
 a {
