--- a/styles/porqueAgora.module.scss
+++ b/styles/porqueAgora.module.scss
@@ -13,7 +13,7 @@
 
 .titulo {
     margin-bottom: 30px;
-    font-family: 'Arial Black', Helvetica, sans-serif;
+    font-family: 'arial_black','Arial Black', Helvetica, sans-serif;
     color: $darker-blue;
     font-weight: bold;
     font-size: 27px;
@@ -62,7 +62,7 @@
 }
 
 .motivoTitulo {
-    font-family: 'Arial Black', Helvetica, sans-serif;
+    font-family: 'arial_black','Arial Black', Helvetica, sans-serif;
     color: $darker-blue;
     font-weight: bold;
     font-size: 21px;
@@ -109,7 +109,7 @@
     }
 
     .motivoTitulo {
-        font-family: 'Arial Black', Helvetica, sans-serif;
+        font-family: 'arial_black','Arial Black', Helvetica, sans-serif;
         color: $darker-blue;
         font-weight: bold;
         font-size: 22px;
