--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -18,8 +18,8 @@ $lighter-blue: rgb(142,204,241);
 }
 
 @font-face {
-    font-family: 'Arial Black';
+    font-family: 'arial_black';
     src: url('arial-black.ttf') format('ttf');
-    font-weight: normal;
+    font-weight: bold;
     font-style: normal;
 }
