--- a/styles/Video.module.scss
+++ b/styles/Video.module.scss
@@ -19,7 +19,7 @@
 
 .titulo {
     margin-bottom: 50px;
-    font-family: 'Arial Black', Helvetica, sans-serif;
+    font-family: 'arial_black','Arial Black', Helvetica, sans-serif;
     color: $darker-blue;
     font-weight: bold;
     font-size: 28px;
