--- a/styles/seisModulos.module.scss
+++ b/styles/seisModulos.module.scss
@@ -13,7 +13,7 @@
 }
 
 .titulo {
-    font-family: 'Arial Black', Helvetica, sans-serif;
+    font-family: 'arial_black','Arial Black', Helvetica, sans-serif;
     color: $darker-blue;
     font-weight: bold;
     font-size: 25px;
@@ -65,7 +65,7 @@
 }
 
 .moduloTituloRight {
-    font-family: 'Arial Black', Helvetica, sans-serif;
+    font-family: 'arial_black','Arial Black', Helvetica, sans-serif;
     color: $dark-blue;
     font-weight: bold;
     font-size: 20px;
@@ -82,7 +82,7 @@
     text-align: right;
 }
 .moduloTituloLeft {
-    font-family: 'Arial Black', Helvetica, sans-serif;
+    font-family: 'arial_black','Arial Black', Helvetica, sans-serif;
     color: $dark-blue;
     font-weight: bold;
     font-size: 20px;
