--- a/styles/sobreEliezer.module.scss
+++ b/styles/sobreEliezer.module.scss
@@ -28,7 +28,7 @@
 
 .titulo {
     margin-bottom: 60px;
-    font-family: 'Arial Black', Helvetica, sans-serif;
+    font-family: 'arial_black','Arial Black', Helvetica, sans-serif;
     color: $darker-blue;
     font-weight: bold;
     font-size: 27px;
