--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -9,6 +9,10 @@ $darker-blue: rgb(6,45,84);
 $light-blue: rgb(71,179,252);
 $lighter-blue: rgb(142,204,241);
 
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;500;600;700&display=swap');
+
+
+
 @font-face {
     font-family: 'moon_getheavy';
     src: url('moon_get-heavy-webfont.woff2') format('woff2'),
@@ -19,7 +23,8 @@ $lighter-blue: rgb(142,204,241);
 
 @font-face {
     font-family: 'arial_black';
-    src: url('arial-black.ttf') format('ttf');
-    font-weight: bold;
+    src: url('arial-black-webfont.woff2') format('woff2'),
+         url('arial-black-webfont.woff') format('woff');
+    font-weight: normal;
     font-style: normal;
 }
