--- a/styles/OQHavera.module.scss
+++ b/styles/OQHavera.module.scss
@@ -40,7 +40,7 @@
 
 .texto {
     width: 40vw;
-    font-family: 'Arial', Helvetica, sans-serif;
+    font-family: 'arial', Helvetica, sans-serif;
     font-size: 19px;
     color: $darker-blue;
     text-align: justify;    
