--- a/styles/cronograma.module.scss
+++ b/styles/cronograma.module.scss
@@ -71,7 +71,7 @@
 }
 
 .moduloTextoRight {
-    font-family: 'Arial', Helvetica, sans-serif;
+    font-family: 'arial', Helvetica, sans-serif;
     color: $dark-blue;
     font-size: 15px;
     margin-top: 8px;
