--- a/styles/porqueAgora.module.scss
+++ b/styles/porqueAgora.module.scss
@@ -73,7 +73,7 @@
 }
 
 .motivoTexto {
-    font-family: 'Arial', Helvetica, sans-serif;
+    font-family: 'arial', Helvetica, sans-serif;
     color: $darker-blue;
     font-size: 18px;
     text-align: center;
