--- a/styles/seisModulos.module.scss
+++ b/styles/seisModulos.module.scss
@@ -75,7 +75,7 @@
 }
 
 .moduloTextoRight {
-    font-family: 'Arial', Helvetica, sans-serif;
+    font-family: 'arial', Helvetica, sans-serif;
     color: $dark-blue;
     font-size: 18px;
     margin-top: 8px;
@@ -92,7 +92,7 @@
 }
 
 .moduloTextoLeft {
-    font-family: 'Arial', Helvetica, sans-serif;
+    font-family: 'arial', Helvetica, sans-serif;
     color: $dark-blue;
     font-size: 18px;
     margin-top: 8px;
@@ -109,7 +109,7 @@
 
 .textoFinalAzul {
     width:50%;
-    font-family: 'Arial', Helvetica, sans-serif;
+    font-family: 'arial', Helvetica, sans-serif;
     color: $dark-blue;
     font-size: 19px;
     line-height: 22px;
