--- a/styles/sobreEliezer.module.scss
+++ b/styles/sobreEliezer.module.scss
@@ -37,7 +37,7 @@
 }
 
 .texto {
-    font-family: 'Arial', Helvetica, sans-serif;
+    font-family: 'arial', Helvetica, sans-serif;
     color: $darker-blue;
     font-size: 18px;
     line-height: 21px;
