--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -28,3 +28,11 @@ $lighter-blue: rgb(142,204,241);
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'arial';
+    src: url('ArialMT.woff2') format('woff2'),
+         url('ArialMT.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
