--- a/styles/seisModulos.module.scss
+++ b/styles/seisModulos.module.scss
@@ -119,7 +119,7 @@
 }
 
 .importante {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'arial', Helvetica, sans-serif;
     color:#D36135;
     font-weight: bold;
     font-size: 16px;
@@ -151,32 +151,45 @@
 
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1010px) {
     .textoFinalAzul {
         width:90%;
         text-align: center;
+        font-size: 18px;
     }
     .importante {
-        font-size: 18px;
+        font-size: 17px;
         width: 90%;
     }
 
     .modulo {
-        margin: 5px auto;
+        margin: 12px auto;
+        justify-content: center;
     }
     
     .moduloTituloRight, .moduloTituloLeft {
-        font-size: 21px !important;
+        font-size: 19px !important;
     }
 
     .moduloTextoRight, .moduloTextoLeft {
-        font-size: 18px !important;
+        font-size: 16px !important;
+    }
+
+    .moduloTextoRight {
+        margin-left: 0px
+    }
+    .moduloTextoLeft {
+        margin-right: 0px
     }
 
     .image > img {
-        width: 30vw;
+        width: 100%;
+        padding: 5px;
     }
     .textWrapper{
         max-width: 60vw!important;
+        padding: 5px;
+        margin: 5px;
+        justify-content: center;
     }
 }
