--- a/styles/FaixaResumo.module.scss
+++ b/styles/FaixaResumo.module.scss
@@ -60,15 +60,15 @@
             flex-direction: row;
             align-items: center;
             justify-content: space-around;
-            padding: 10px 10px;
+            padding: 10px 10px 10px 10px;
             width: 100%;
             margin: 10px 0px;
         }
 
 
         .text{
-            margin: 0 0 0 20px;
-            max-width: 60vw;
+            margin: 0 10px 0 20px;
+            max-width: 55vw;
             font-size: 14px;
         }
         .barra {
