--- a/styles/MainBanner.module.scss
+++ b/styles/MainBanner.module.scss
@@ -66,9 +66,9 @@
 }
 
 
-@media screen and (max-width: 570px) {
+@media screen and (max-width: 620px) {
     .logo {
-        width: 374px;
-        height: 177px;
+        width: 87vw;
+        height: 42vw;
     }
 }
