--- a/styles/MainBanner.module.scss
+++ b/styles/MainBanner.module.scss
@@ -12,7 +12,7 @@
     position: relative;
     // transform-style: inherit;
 
-    background: url('/fotobg.png');
+    background: url('/FotoBg.jpg');
     background-size:cover;
     background-repeat: no-repeat;
     background-position-y: center;
