--- a/styles/BtnQueroEntrar.module.scss
+++ b/styles/BtnQueroEntrar.module.scss
@@ -14,6 +14,7 @@
     font-family:  'moon_getheavy', 'Arial Black', Helvetica, sans-serif;
     font-weight: bold;
     font-size: 23px;
+    line-height: 30px!important;
     letter-spacing: 2px;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
     border-radius: 10px;
