--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -12,6 +12,7 @@
   align-items: center;
   text-align: center;
   padding: 30px 10px;
+  font-size: .8em;
 }
 
 .redesSociais {
@@ -19,6 +20,6 @@
   flex-direction: row;
   justify-content: space-between;
   width: 200px;
-  margin-top: 10px;
+  margin: 20px;
 }
 
