--- a/styles/BtnQueroEntrar.module.scss
+++ b/styles/BtnQueroEntrar.module.scss
@@ -5,6 +5,7 @@
     padding: 0 auto;
     margin: 10px auto 5px auto;
     text-align: center;
+    z-index: 3;
 }
 
 .button {
@@ -20,6 +21,7 @@
     border-radius: 10px;
     border-width: 0px;
     cursor: pointer;
+    z-index: 4;
 
 }
 
