--- a/styles/MainBanner.module.scss
+++ b/styles/MainBanner.module.scss
@@ -1,7 +1,7 @@
 @import "theme";
 
 .section { 
-    min-height: 97vh;
+    min-height: 80vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
@@ -13,14 +13,23 @@
     position: relative;
     // transform-style: inherit;
 
-    background: url('/FotoBg.jpg');
+    background: url('/background.jpg');
     background-size:cover;
     background-repeat: no-repeat;
-    background-position-y: center;
-    background-position-x: center;
+    background-position: 18% 90%;
+}
 
+.ImagemWrapper {
+    position: absolute;
+    bottom: -1%;
+    z-index: 1;
+    margin: 0 auto;
+    width: 100vw;
+    text-align: center;
+}
 
-
+.Imagem {
+    margin: 0 auto;
 }
 
 
@@ -51,15 +60,16 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    z-index: 3;
 }
 
 .logo {
     margin-right: 50px;
-    margin-top: 80px;
+    margin-top: 30px;
 }
 
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1000px) {
     .logoWrapper {
         justify-content: center !important;
     }
@@ -68,8 +78,13 @@
     }
 
     .section {
-        min-height: 80vh;
         justify-content: space-between;
+    }
+
+    .Imagem {
+        width: 365px;
+        height: 403px;
+
     }
 }
 
@@ -83,7 +98,7 @@
 
 @media screen and (max-width: 620px) {
     .logo {
-        width: 87vw;
-        height: 42vw;
+        width: 79vw;
+        height: 37vw;
     }
 }
