--- a/styles/Cronometro.module.scss
+++ b/styles/Cronometro.module.scss
@@ -1,18 +1,10 @@
 @import "theme";
 
-.cronometroWrapper {
-    width: 100%;
-    padding: 0 auto;
-    z-index: 3;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-}
-
 .cronometro {
-    width: 300px;
+    height: 500px;
+    width: 350px;
     font-size: 22px;
-    line-height: 22px;
+    line-height: 16px;
     font-family: 'arial';
     color: white;
     background-color: black;
