--- a/styles/MainBanner.module.scss
+++ b/styles/MainBanner.module.scss
@@ -1,7 +1,7 @@
 @import "theme";
 
 .section { 
-    min-height: 80vh;
+    min-height: 70vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
@@ -23,7 +23,6 @@
     position: absolute;
     bottom: -0.5%;
     z-index: 1;
-    margin: 0 auto;
     width: 100vw;
     text-align: center;
 }
@@ -33,41 +32,32 @@
 }
 
 
-// .section,
-// .section:before {
-//     background: 50% 50% / cover;
-// }
-
-// .section::before {
-//     content: "";
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     right: 0;
-//     bottom: 0;
-//     display: block;
-//     background: url('/fotobg.png');
-//     background-size:cover;
-//     background-repeat: no-repeat;
-//     background-position-y: center;
-//     transform-origin: center center 0;
-//     transform: translateZ(-1px) scale(2);
-//     z-index: -1;
-//     min-height: 100vh;
-// }
-
 .logoWrapper {
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
+    flex-direction: column;
+    justify-content: center;
     z-index: 3;
+    height: 100% !important;
 }
 
 .logo {
-    margin-right: 50px;
+    margin-left: 50px;
     margin-top: 30px;
 }
 
+.cronometroWrapper {
+    z-index: 3;
+    position: absolute;
+    right:0;
+    bottom: 0;
+
+
+
+    // padding: 0 auto;
+    // display: flex;
+    // flex-direction: row;
+    // justify-content: flex-end;
+}
 
 @media screen and (max-width: 1000px) {
     .logoWrapper {
